# LDM_Docker

./: .env  .gitignore  .gitmodules  Dockerfile  Install_internal.md  Makefile  README.md  README2.md  TIB-dev-requirements.txt  TIB-requirements.txt  ckan-entrypoint.sh  clean_database.sh  docker-compose.yml
LDM_examples_files/DATA-FORMATS/: 2017-12-21_vnstat-export-br0.json  2017-12-21_vnstat-export-br0.xml
LDM_examples_files/RESOURCES/: db_backup_ckan.sql
Plugins/ckanext-Code2NB/: README.md  setup.py
Plugins/ckanext-LDM_SPARQL/: .coveragerc  .travis.yml  MANIFEST.in  README.rst  dev-requirements.txt  requirements.txt  setup.cfg  setup.py  test.ini
Plugins/ckanext-LDMoauth2/: .travis.yml  MANIFEST.in  README.rst  setup.cfg  test.ini
Plugins/ckanext-TIBdcat/: setup.py
Plugins/ckanext-TIBimport/: .gitignore  .travis.yml  MANIFEST.in  README.rst
Plugins/ckanext-TIBnotify/: .travis.yml  README.rst  setup.cfg
Plugins/ckanext-TIBtheme/: MANIFEST.in  README.rst  setup.cfg  setup.py
Plugins/ckanext-advancedstats/: CHANGELOG.md  MANIFEST.in  README.md  setup.cfg  setup.py
Plugins/ckanext-advancedstats/ckanext/advancedstats/: plugin.py
Plugins/ckanext-advancedstats/ckanext/advancedstats/i18n/: ckanext-advancedstats.pot
Plugins/ckanext-advancedstats/ckanext/advancedstats/i18n/de/LC_MESSAGES/: ckanext-advancedstats.mo  ckanext-advancedstats.po
Plugins/ckanext-advancedstats/ckanext/advancedstats/static/: webassets.yml
Plugins/ckanext-advancedstats/ckanext/advancedstats/static/css/: advancedstats.css
Plugins/ckanext-advancedstats/ckanext/advancedstats/templates/home/snippets/: stats.html
Plugins/ckanext-advancedstats/ckanext_advancedstats.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
Plugins/ckanext-datacomparison/: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  README.md  (+1 more)
Plugins/ckanext-fedorkg/: CHANGELOG.md  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
Plugins/ckanext-fedorkg/ckanext/fedorkg/: __init__.py  controller.py  helpers.py  plugin.py  views.py
Plugins/ckanext-fedorkg/ckanext/fedorkg/i18n/: ckanext-fedorkg.pot
Plugins/ckanext-fedorkg/ckanext/fedorkg/i18n/de/LC_MESSAGES/: ckanext-fedorkg.mo  ckanext-fedorkg.po
Plugins/ckanext-fedorkg/ckanext/fedorkg/static/: webassets.yml
Plugins/ckanext-fedorkg/ckanext/fedorkg/static/css/: fedorkg-admin.css  fedorkg-custom.css
Plugins/ckanext-fedorkg/ckanext/fedorkg/static/js/: fedorkg-admin.js  fedorkg-query.js
Plugins/ckanext-fedorkg/ckanext/fedorkg/templates/: admin.jinja2  admin_fedorkg.jinja2  header.html  sparql.jinja2
Plugins/ckanext-fedorkg/ckanext_fedorkg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
Plugins/ckanext-gitimport/: .gitignore  MANIFEST.in  README.md  package-lock.json  package.json  setup.cfg  setup.py  test.ini
Plugins/ckanext-gitimport/ckanext/gitimport/: cli.py  helpers.py  plugin.py  views.py
Plugins/ckanext-gitimport/ckanext/gitimport/assets/: script.js  webassets.yml
Plugins/ckanext-gitimport/ckanext/gitimport/logic/: action.py  auth.py  schema.py  validators.py
Plugins/ckanext-gitimport/ckanext/gitimport/public/: webassets.yml
Plugins/ckanext-gitimport/ckanext/gitimport/public/css/: imgs.css
Plugins/ckanext-gitimport/ckanext/gitimport/public/js/: get_dataset.js  gitimport.js
Plugins/ckanext-gitimport/ckanext/gitimport/templates/: header.html
Plugins/ckanext-gitimport/ckanext/gitimport/templates/snippets/: add_dataset.html
Plugins/ckanext-gitimport/ckanext/gitimport/tests/: test_helpers.py  test_plugin.py  test_views.py
Plugins/ckanext-gitimport/ckanext/gitimport/tests/js/: gitimport_functions.js  gitimport_unittests.js
Plugins/ckanext-gitimport/ckanext/gitimport/tests/logic/: test_action.py  test_auth.py  test_validators.py
Plugins/ckanext-graphviewer/: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.sh  index.html  mind.org  setup.py
Plugins/ckanext-graphviewer/ckanext/: setup.py
Plugins/ckanext-graphviewer/ckanext/graphviewer/: plugin.py
Plugins/ckanext-graphviewer/ckanext/graphviewer/public/: rdf_wasm_graph_bg.wasm
Plugins/ckanext-graphviewer/ckanext/graphviewer/public/graph_viewer/: rdf_wasm_graph.js  rdf_wasm_graph_bg.wasm
Plugins/ckanext-graphviewer/ckanext/graphviewer/templates/package/: graph_export.html  graph_viewer.html
Plugins/ckanext-graphviewer/src/: api_client.rs  button.rs  constants.rs  export.rs  graph_processor.rs  main.rs  node_menu.rs  parser.rs  sample.n3  theme.rs
Plugins/ckanext-graphviewer/src/ui/: analytics_scene.rs  graph_scene.rs  inspector_scene.rs  mod.rs  search_bar.rs
docker/: .env  Dockerfile  TIB-dev-requirements.txt  ckan-entrypoint.sh  ckan-entrypoint.sh.bak  clean_database.sh  dev-requirements.txt  docker-compose.yml  docker-compose.yml.bak  reload_database.sh  reload_database.sh.bak  requirements.txt
docker_img/: docker-compose.yml
fedorkg/: prompt.txt
files/: Drive_shaft.dwg  GW150914_tutorial.ipynb  Satellite_Example.ipynb
jupyterhub/: Dockerfile  api.py  generate_list_user.py  guest_list.txt  jupyterhub_api.py  jupyterhub_config.py  start_api.sh
jupyternotebook/: Dockerfile
postgresql-loaded/: Dockerfile  ckan_examples.sql
rdf_metadata/: data-service-example-jupyternotebook.nt  example-cad.nt  example-data-formats-visualizations.nt  example-documents-visualizations.nt  example-video-2.nt  luh-a-generic-gust-definition-and-detection-method-based-on-wavelet-analysis.nt  luh-a-neural-approach-for-text-extraction-from-scholarly-figures.nt  luh-areas-in-lower-saxony-with-low-and-medium-spatial-vulnerability-to-ground-mounted-photovoltaics.nt
solr/: Dockerfile  schema.xml
user_img_bug/: update.py
(+546 files in other folders)
