[metadata]
name = ckanext-advancedstats
version = attr: ckanext.advancedstats.__version__
url = https://github.com/SDM-TIB/ckanext-advancedstats
author = Philipp D. Rohde
author_email = philipp.rohde@tib.eu
description = A CKAN extension that adds advanced stats to the landing page of CKAN.
long_description = file: README.md
keywords = CKAN Statistics
license = GNU/GPLv3
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3 :: Only

[options]
include_package_data = True
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    contrib
    docs
    tests*

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/advancedstats/i18n/ckanext-advancedstats.pot
width = 80

[init_catalog]
domain = ckanext-advancedstats
input_file = ckanext/advancedstats/i18n/ckanext-advancedstats.pot
output_dir = ckanext/advancedstats/i18n

[update_catalog]
domain = ckanext-advancedstats
input_file = ckanext/advancedstats/i18n/ckanext-advancedstats.pot
output_dir = ckanext/advancedstats/i18n

[compile_catalog]
domain = ckanext-advancedstats
directory = ckanext/advancedstats/i18n
statistics = true
