[metadata]
name = ckanext-fedorkg
version = attr: ckanext.fedorkg.__version__
url = https://github.com/SDM-TIB/ckanext-fedorkg
author = Philipp D. Rohde
author_email = philipp.rohde@tib.eu
description = A CKAN extension that adds the feature of querying open research knowledge graphs.
long_description = file: README.md
keywords = CKAN ORKG Federation
license = GNU/GPLv3
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3 :: Only

[options]
include_package_data = True
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    contrib
    docs
    tests*

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/fedorkg/i18n/ckanext-fedorkg.pot
width = 80

[init_catalog]
domain = ckanext-fedorkg
input_file = ckanext/fedorkg/i18n/ckanext-fedorkg.pot
output_dir = ckanext/fedorkg/i18n

[update_catalog]
domain = ckanext-fedorkg
input_file = ckanext/fedorkg/i18n/ckanext-fedorkg.pot
output_dir = ckanext/fedorkg/i18n

[compile_catalog]
domain = ckanext-fedorkg
directory = ckanext/fedorkg/i18n
statistics = true