[metadata]
name = ckanext-gitImport
version = 0.0.1
description = This extension allows the user to import from a Github repository just by providing the repository's name
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mazen-B/ckanext-gitImport
author = Mazen Bechara
author_email = bechara.mazen@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN GitHub

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             gitimport = ckanext.gitimport.plugin:GitimportPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/gitimport/i18n/ckanext-gitimport.pot
width = 80

[init_catalog]
domain = ckanext-gitimport
input_file = ckanext/gitimport/i18n/ckanext-gitimport.pot
output_dir = ckanext/gitimport/i18n

[update_catalog]
domain = ckanext-gitimport
input_file = ckanext/gitimport/i18n/ckanext-gitimport.pot
output_dir = ckanext/gitimport/i18n
previous = true

[compile_catalog]
domain = ckanext-gitimport
directory = ckanext/gitimport/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
